Fixed sidebar visibility on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,11 @@ body {
   font-family: $font-poppins;
 }
 
+html,
+body {
+  overflow-x: hidden !important;
+}
+
 a {
   text-decoration: none;
   list-style: none;
